1999-07-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* java/lang/natSystem.cc (arraycopy): Use bcopy if memmove is not
	available.  Don't cast memmove args to (void*).
	* configure.in: Do not abort if memmove is not available.

Sun Jul 25 01:43:34 1999  Anthony Green  <green@cygnus.com>

	* mauve-libgcj: Disable Object Serialization tests.

1999-07-19  Tom Tromey  <tromey@cygnus.com>

	* include/stamp-h.in: New file.

1999-07-12  Tom Tromey  <tromey@cygnus.com>

	* java/lang/mprec.h: Protect definition of uint32_t with #ifndef
	_UINT32_T.

1999-07-08  Tom Tromey  <tromey@cygnus.com>

	* mauve-libgcj: Omit InetAddressTest.  Don't mention
	MyURLConnection.

1999-07-07  Tom Tromey  <tromey@cygnus.com>

	* mauve-libgcj: Omit SocketTest and URLConnectionTest.

	* mauve-libgcj: Turn off many tests which are known to fail.

1999-07-07  Andrew Haley  <aph@cygnus.com>

        * include/i386-signal.h (MAKE_THROW_FRAME): Advance EIP by two
	bytes to make it point after the instruction where the trap
	occurred.
	(HANDLE_DIVIDE_OVERFLOW): Ditto.

1999-07-07  Tom Tromey  <tromey@cygnus.com>

	* mauve-libgcj: Explicitly enable formerly disabled java.text
	tests.

	* mauve-libgcj: Turn off ClassTest test.  Enable java.text tests
	again.

1999-07-01  Andrew Haley  <aph@cygnus.com>

        * include/i386-signal.h: Replace sigaction () with __sigaction ().
        This is a workaround for a bug in glibc's pthreads package which
        doesn't deliver any sigcontext information to a signal handler.

1999-06-24  Tom Tromey  <tromey@cygnus.com>

	* java/lang/e_asin.c: Don't use __int32_t or __uint32_t.
	* java/lang/fdlibm.h (HUGE): Conditionally define.

Fri May 28 22:20:03 1999  Anthony Green  <green@cygnus.com>

	* java/lang/fdlibm.h: Don't use __uint32_t.  Include mprec.h.
	* java/lang/e_log.c: Don't use __uint32_t.

1999-05-27  Eric Christopher <echristo@cygnus.com>

	* configure: Rebuilt
	* configure.in: Fixed ISO C9X and namespace collision with __uint32_t